Fix blocklisted calls to Map.copyOf(), of(), entry().