@@ -41,6 +41,7 @@
 
 package com.oracle.js.parser.ir;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -185,11 +186,15 @@ public final class Module {
         }
 
         public static ModuleRequest create(TruffleString specifier) {
-            return new ModuleRequest(specifier, Map.of());
+            return new ModuleRequest(specifier, Collections.emptyMap());
         }
 
         public static ModuleRequest create(TruffleString specifier, Map<TruffleString, TruffleString> assertions) {
             return new ModuleRequest(specifier, Map.copyOf(assertions));
+        }
+
+        public static ModuleRequest createTrusted(TruffleString specifier, Map<TruffleString, TruffleString> assertions) {
+            return new ModuleRequest(specifier, assertions);
         }
 
         public TruffleString getSpecifier() {
